--- a/style/style.css
+++ b/style/style.css
@@ -27,10 +27,22 @@ body {
 .logo-container>img{
    max-width: 100%;
 }
+.social {
+    list-style: none;
+    display: flex;
+    gap: 25px;
+    margin: 0 10px;
+}
+.social>li>a {
+    text-decoration: none;
+    color: #4C4637;
+}
+.social>li>a:hover {
+    color: #ffffff;
+}
 .elemento-desplegable {
     list-style: none;
-    margin-right: 15px;
-    padding: 10px;
+    margin: 0 15px 0 0;
 }
 .cuerpo {
     width: 100%;
