--- a/style/style.css
+++ b/style/style.css
@@ -27,6 +27,14 @@ body {
 .logo-container>img{
    max-width: 100%;
 }
+.medium-cont {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.medium-cont > ul {
+    padding: 0;
+}
 .social {
     list-style: none;
     display: flex;
@@ -39,6 +47,42 @@ body {
 }
 .social>li>a:hover {
     color: #ffffff;
+}
+
+.button-52 {
+  font-size: 14px;
+  font-weight: 200;
+  letter-spacing: 1px;
+  padding: 13px 20px 13px;
+  outline: 0;
+  border: 1px solid black;
+  cursor: pointer;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+.button-52:after {
+  content: "";
+  background-color: #c98a14;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 7px;
+  left: 7px;
+  transition: 0.2s;
+}
+.button-52:hover:after {
+  top: 0px;
+  left: 0px;
+}
+.regalo-link {
+    margin: 0 20px;
+    text-align: center;
+    text-decoration: none;
+    color: #4C4637;
 }
 .elemento-desplegable {
     list-style: none;
@@ -119,4 +163,10 @@ h3 {
     .cuerpo {
         margin-top: 170px
     }
+}
+
+@media (min-width: 768px) {
+  .button-52 {
+    padding: 13px 50px 13px;
+  }
 }
