--- a/style/style.css
+++ b/style/style.css
@@ -9,7 +9,7 @@ body {
     background: #aa9d7a;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .inverse {
     top: 0;
@@ -116,8 +116,18 @@ h3 {
     margin: 10px 0 0 10px;
     width: 40%;
     padding: 5px;
+    position: relative;
+    overflow: hidden;
 }
-
+.nuevo-cartel {
+    position: absolute;
+    top: 0;
+    right: 30%;
+    background-color: #f00;
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+}
 .prod-img {
     height: 160px;
 }
@@ -153,15 +163,18 @@ h3 {
     padding: 5px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 480px) {
     .nav-bar {
-        height: 170px;
+        height: 110px;
     }
     .logo-container {
         width: 10%;
     }
     .cuerpo {
-        margin-top: 170px
+        margin-top: 110px
+    }
+    .nuevo-cartel {
+        font-size: 12px;
     }
 }
 
